--- a/templates/default-content.html
+++ b/templates/default-content.html
@@ -2,8 +2,19 @@
 <html>
   <head>
     <title>Your Awesome Webpage</title>
+    <style>
+      .footnote { visibility: hidden; }
+      .footnote.active { visibility: visible; }
+    </style>
   </head>
   <body>
-    <p>Make something amazing with the web</p>
+    <video height="180" width="300" autoplay="">
+      <source src="http://videos.mozilla.org/serv/webmademovies/popcornplug.mp4">
+      <source src="http://videos.mozilla.org/serv/webmademovies/popcornplug.ogv">
+      <source src="http://videos.mozilla.org/serv/webmademovies/popcornplug.webm">
+    </video>
+    <div class="footnote" data-active-during="2-6">Pop!</div>
+    <script src="http://popcornjs.org/code/dist/popcorn.js"></script>
+    <script src="http://toolness.github.com/instapoppin/instapoppin.js"></script>
   </body>
 </html>
