serve locally-hosted instappoppin and popcorn.js scripts in default template

--- a/templates/default-content.html
+++ b/templates/default-content.html
@@ -14,7 +14,7 @@
       <source src="http://videos.mozilla.org/serv/webmademovies/popcornplug.webm">
     </video>
     <div class="footnote" data-active-during="2-6">Pop!</div>
-    <script src="http://popcornjs.org/code/dist/popcorn.js"></script>
-    <script src="http://toolness.github.com/instapoppin/instapoppin.js"></script>
+    <script src="<%= BASE_URL %>butter/external/popcorn-js/popcorn.js"></script>
+    <script src="<%= BASE_URL %>js/instapoppin.js"></script>
   </body>
 </html>
